added some exceptions and fixed some error's flow